--- a/style/style.css
+++ b/style/style.css
@@ -153,17 +153,6 @@ body {
 }
 
 @media (max-width: 800px) {
-    
-
-
-    .logo {
-        width: 100px;
-        height: 20px;
-        align-items: center;
-   
-    }
-
-
     .search-input-bar {
         display: flex;
         flex-direction: column;
@@ -225,107 +214,55 @@ body {
         box-shadow: -8px 0px 20px rgb(0 0 0 / 20%);
     }
 }
-
-
 
 @media (max-width: 500px) {
     .logo {
-        width: 100px;
         height: 20px;
-        align-items: center;
-   
+        width: 100px;
     }
-        
-.btn {
-    margin: 5px 7px;
-    width: 30px;
-    height: 30px;
-    background-color: white;
-    border-radius: 0.5rem;
-    border: none;
-    transition: All 250ms ease;
-}
-
-.btn:hover {
-    cursor: pointer;
-    background-color: wheat;
-}
-    
-.font-color {
-    padding: 5px;
-    border: none;
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    mix-blend-mode: hue;
-}
-
+    .btn {
+        margin: 3px 2px;
+        width: 30px;
+        height: 30px;
+    }
+    .font-style-container {
+        display: flex;
+    }
+    #meme-text{
+        width: 100px;
+    }
+    #font-kind {
+        flex-basis: 60%;
+        margin: 3px 2px;
+        width: 100px;
+        border-radius: 5px;
+        height: 30px;
+    }
+    .font-style {
+        /* flex-basis: 25%; */
+    }
     .color-img {
-        max-width: 40px;
+        flex-basis: 25%;
+        max-width: 30px;
         background-color: white;
         border-radius: 5px;
-        margin: 5px;
+        margin: 3px;
     }
-    
-
-    .search-input-bar {
-        display: flex;
-        flex-direction: column;
-    }
-    #searches-bar {
-        display: flex;
-    }
-    #searches-bar>* {
-        margin: 5px;
+    .font-color {
         padding: 5px;
-        font-size: 1rem;
-        font-family: monospace;
-    }
-    .canvas-container {
-        flex-direction: column;
-        gap: 10px
-    }
-    .flex.space-between {
-        justify-content: space-between;
-    }
-    .main-layout {
-        padding-right: 1.4rem;
-        padding-left: 1.4rem;
-    }
-    .btn-menu-toggle-hidden {
-        display: inline;
-        margin: 5px;
-        font-size: 2rem;
         position: absolute;
-        background-color: #ff7f00;
-        border: none;
-        color: white;
-        right: 0;
-        top: 0;
+        width: 30px;
+        height: 30px;
     }
-    .nav-bar {
-        position: fixed;
-        top: 66px;
-        right: 0;
-        /* margin: 0 auto; */
-        flex-direction: column;
-        min-width: 50%;
-        background-color: rgb(220 220 220 / 90%);
-        height: 100%;
-        box-shadow: 0px 0px 0px transparent;
-        transform: translateX(100%);
-        transition: transform .6s;
-        z-index: 10;
+    .emoji-container {
+        width: 200px;
+        height: 150px;
     }
-    .nav-bar li {
-        width: 100%;
-        background-color: #ff7f00;
+    .meme-copy-container .btn {
+        font-size: 0.5rem;
+        width: 55px;
     }
-    .nav-bar a {
-        width: 50%;
-    }
-    body.menu-open .nav-bar {
-        transform: translateX(0);
-        box-shadow: -8px 0px 20px rgb(0 0 0 / 20%);
+    .meme-copy-container .btn:hover {
+        width: 60px;
     }
 }
