--- a/style/style.css
+++ b/style/style.css
@@ -19,9 +19,9 @@ body {
 
 .canvas-container {
     /* align-items: center; */
-    /* justify-content: center; */
+    justify-content: center;
     /* margin: 0 50px; */
-    /* padding: 30px 47px; */
+    padding: 30px 47px;
 }
 
 #canvas:hover {
@@ -40,13 +40,13 @@ body {
 #meme-text {
     width: 100%;
     padding: 15px;
-    grid-area: input;
+    /* grid-area: input; */
 }
 
 /* ------------------------------------------ */
 
 .move-text-up {
-    grid-area: arrows;
+    /* grid-area: arrows; */
 }
 
 #editor input {
@@ -59,9 +59,10 @@ body {
 }
 
 .btn {
-    margin: 15px 10px;
-    width: 56px;
-    height: 56px;
+    text-align: center;
+    margin: 10px 5px;
+    width: 40px;
+    height: 40px;
     background-color: white;
     border-radius: 0.5rem;
     border: none;
@@ -74,11 +75,11 @@ body {
 }
 
 #font-kind {
-    align-self: center;
-    margin: 15px 10px;
+    /* align-self: center; */
+    /* margin: 15px 10px; */
     width: 220px;
     border-radius: 10px;
-    height: 50px;
+    height: 40px;
     border: none;
     text-align: center;
 }
@@ -90,35 +91,47 @@ body {
 }
 
 .meme-copy-container {
+    display: flex;
+    align-items: center;
     width: 100%;
 }
 
 .meme-copy-container .btn {
     color: white;
+    flex-grow: 1;
     font-size: 0.8rem;
-    width: 110px;
+    width: 80px;
     background-color: #ff7f00;
     transition: All 0.3s ease;
 }
 
 .meme-copy-container .btn:hover {
     background-color: #cc6b09;
-    width: 115px;
+    width: 95px;
 }
 
 .color-img {
-    max-width: 57px;
+    max-width: 40px;
     background-color: white;
     border-radius: 10px;
-    margin: 15px;
+    /* margin: 15px; */
+}
+.emoji-container button{
+    object-fit: cover;
+    font-size: 0.6rem;
+    background-color: white;
+    border: none;
+}
+.emoji-container button:hover{
+    background-color: rgb(247, 236, 236);
 }
 
 .font-color {
-    padding: 5px;
+    /* padding: 5px; */
     border: none;
     position: absolute;
-    width: 56px;
-    height: 56px;
+    width: 35px;
+    height: 35px;
     mix-blend-mode: hue;
 }
 
@@ -217,8 +230,9 @@ body {
 
 @media (max-width: 500px) {
     .logo {
-        height: 20px;
-        width: 100px;
+        object-fit: cover;
+        height: 15px;
+        width: 70px;
     }
     .btn {
         margin: 3px 2px;
@@ -228,8 +242,8 @@ body {
     .font-style-container {
         display: flex;
     }
-    #meme-text{
-        width: 100px;
+    #meme-text {
+        width: 180px;
     }
     #font-kind {
         flex-basis: 60%;
@@ -255,8 +269,8 @@ body {
         height: 30px;
     }
     .emoji-container {
-        width: 200px;
-        height: 150px;
+        width: 180px;
+        height: 100px;
     }
     .meme-copy-container .btn {
         font-size: 0.5rem;
@@ -265,10 +279,17 @@ body {
     .meme-copy-container .btn:hover {
         width: 60px;
     }
-
-#canvas{
-    align-self: center;
-    width: 200px;
-    height: 200px;
-}
+    #canvas {
+        align-self: center;
+        width: 200px;
+        height: 200px;
+    }
+    .footer-container {
+        padding: 0px;
+        height: 80px;
+        flex-direction: column;
+        justify-content: flex-start;
+        text-align: center;
+        background-color: #ff7f00;
+    }
 }
